--- a/resonite_communities/clients/web/templates/admin/metrics.html
+++ b/resonite_communities/clients/web/templates/admin/metrics.html
@@ -18,7 +18,6 @@
             height: 200px;
         }
         .metrics-card {
-            background-color: #f5f5f5;
             border-radius: 8px;
             padding: 20px;
             margin-bottom: 20px;
@@ -78,16 +77,14 @@
                 </div>
             </div>
 
-            <div class="cell">
-                <div class="card has-text-centered">
+                <div class="card metrics-card">
                     <div class="card-content">
-                        <p class="title">World Map (Daily Unique Users)</p>
+                        <p class="title has-text-centered">World Map (Daily Unique Users)</p>
                         <div class="content">
                             <div id="regions_div" style="width: 900px; height: 500px; margin: 0 auto;"></div>
                         </div>
                     </div>
                 </div>
-            </div>
 
             <!-- Daily Unique Users Chart -->
             <div class="card metrics-card">
